HERO-BACKGROUND: Fixed the gradient overlay and background of the section so the edges of the animation are not visible

--- a/public/styles/hero.css
+++ b/public/styles/hero.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: #1A1919;
+  background-color: rgb(0, 0, 0);
 }
 
 .background-video{
@@ -20,8 +20,7 @@
   left: 0;
   width: 100%!important;
   height: 100%;
-  background: rgb(0,180,206);
-  background: linear-gradient(to top, rgba(0, 11, 12, 0.72), rgba(0, 0, 0, 0));
+  background:linear-gradient(to top, rgba(0, 30, 55, 0.5), rgba(0, 16, 16, 0.36));
   z-index: 2;
 }
  
@@ -33,7 +32,6 @@
   align-items: center;
   justify-content: space-evenly;
   text-align: left;
-  z-index:3;
 }
 
 .hero-paragraph{
@@ -41,6 +39,7 @@
   flex-direction: column;
   align-items: center;
   width: 90%;
+  z-index:3;
 }
 
 .hero-paragraph h3{
@@ -144,18 +143,7 @@
     max-height: calc(100vh - 150px/2);
     object-fit:fill;
   }
-  
-  .gradient-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%!important;
-    height: 100%;
-    background: rgb(0,180,206);
-    background: linear-gradient(0deg, rgba(0, 11, 12, 0.586) 0%, rgba(66,93,167,0.3236074270557029) 100%);
-    z-index: 2;
-  }
-   
+     
   .hero-content {
     position: relative;
     display: flex;
